MyDemoOrg/force-app/main/default/objects/Salesforce_Case_Body__c/Salesforce_Case_Body__c.object-meta.xml
<CustomObject>
    <label>Salesforce Case Body</label>
    <nameField>
        <label>Salesforce Case Body Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Case Bodies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>