MyDemoOrg/force-app/main/default/objects/Salesforce_Case_Body__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>