MyDemoOrg/force-app/main/default/objects/Salesforce_Case_Body__c/fields/Customize_Message__c.field-meta.xml
<CustomField>
    <fullName>Customize_Message__c</fullName>
    <label>Customize Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>